# time-mocker-cpp

./: .gitignore  CMakeLists.txt  README.md  TimeMocker.sln
Shared/: MockTimeInfo.h
TimeMocker.Hook/: TimeMocker.Hook.def  TimeMocker.Hook.vcxproj  dllmain.cpp  exports.cpp
TimeMocker.Injector/: InjectionManager.cpp  InjectionManager.h  ProcessWatcher.h  TimeMocker.Injector.vcxproj
TimeMocker.UI/: TimeMocker.UI.vcxproj  main.cpp
TimeMocker.UI/imgui/: README.md
scripts/: setup.ps1
